Fixed flickering of toast element.

--- a/src/styles/_toast.scss
+++ b/src/styles/_toast.scss
@@ -13,8 +13,8 @@
 
 #toast.show {
   visibility: visible;
-  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
-  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  -webkit-animation: fadein 0.5s, fadeout 0.5s 3s;
+  animation: fadein 0.5s, fadeout 0.5s 3s;
 }
 
 @-webkit-keyframes fadein {
